force-app/main/default/objects/ServiceLog__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>Contains Request body</description>
    <inlineHelpText>Contains Request body</inlineHelpText>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>