force-app/main/default/objects/ServiceLog__c/fields/ServiceStatus__c.field-meta.xml
<CustomField>
    <fullName>ServiceStatus__c</fullName>
    <label>Service Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ServiceStatus</valueSetName>
    </valueSet>
</CustomField>