force-app/main/default/objects/ServiceLog__c/listViews/Account_to_SAP.listView-meta.xml
<ListView>
    <fullName>Account_to_SAP</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ServiceStatus__c</columns>
    <columns>ResponseCode__c</columns>
    <columns>Message__c</columns>
    <columns>Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ServiceName__c</field>
        <operation>equals</operation>
        <value>AccountToSAP</value>
    </filters>
    <label>Account to SAP</label>
</ListView>