force-app/main/default/objects/ServiceLog__c/listViews/ContactToSAP.listView-meta.xml
<ListView>
    <fullName>ContactToSAP</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ServiceStatus__c</columns>
    <columns>ResponseCode__c</columns>
    <columns>Message__c</columns>
    <columns>Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ServiceName__c</field>
        <operation>equals</operation>
        <value>ContactsToSAP</value>
    </filters>
    <label>Contact to SAP</label>
</ListView>