force-app/main/default/objects/ServiceLog__c/listViews/Invoices_to_SF.listView-meta.xml
<ListView>
    <fullName>Invoices_to_SF</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ServiceStatus__c</columns>
    <columns>ResponseCode__c</columns>
    <columns>Message__c</columns>
    <columns>Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ServiceName__c</field>
        <operation>equals</operation>
        <value>InvoiceToSF</value>
    </filters>
    <label>Invoices to SF</label>
</ListView>