force-app/main/default/objects/ServiceLog__c/listViews/OrderToSAP_log.listView-meta.xml
<ListView>
    <fullName>OrderToSAP_log</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ServiceStatus__c</columns>
    <columns>ResponseCode__c</columns>
    <columns>Message__c</columns>
    <columns>Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ServiceName__c</field>
        <operation>equals</operation>
        <value>OrderToSAP</value>
    </filters>
    <label>OrderToSAP</label>
</ListView>