force-app/main/default/objects/ServiceLog__c/listViews/SXC_View.listView-meta.xml
<ListView>
    <fullName>SXC_View</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ServiceStatus__c</columns>
    <columns>ResponseCode__c</columns>
    <columns>Message__c</columns>
    <columns>Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ServiceStatus__c</field>
        <operation>equals</operation>
        <value>error,warn</value>
    </filters>
    <filters>
        <field>ResponseCode__c</field>
        <operation>equals</operation>
        <value>400</value>
    </filters>
    <label>Warnings &amp; Errors</label>
</ListView>